--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="src/assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="src/styles/style.css">  
   <title>Frontend Mentor | Profile card component</title>
-
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,21 +13,41 @@
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <article class="card">
+    <div class="card__media">
+      <img src="" alt="Young afroamerican man">
+    </div>
 
-  803K
-  Likes
+    <section class="card__body">
+      <header class="card__title">
+        <h2 class="card__name">Victor Crest</h2>
+        <p class="card__age">26</p>
+      </header>
+      <p class="card__description">London</p>
 
-  1.4K
-  Photos
-  <div class="attribution">
+      <div class="card__info">
+        <div class="card__info-item">
+          <h3 class="card__count">80K</h3>
+          <p class="card__count-description">Followers</p>
+        </div>
+
+        <div class="card__info-item">
+          <h3 class="card__count">803K</h3>
+          <p class="card__count-description">Likes</p>
+        </div>
+
+        <div class="card__info-item">
+          <h3 class="card__count">1.4K</h3>
+          <p class="card__count-description">Photos</p>
+        </div>
+      </div>
+    </section>
+  </article>
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
