--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="src/styles/style.css">  
   <title>Frontend Mentor | Profile card component</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
@@ -47,7 +43,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">dekitsuneco</a>.
   </footer>
 </body>
 </html>
