--- a/app/index.html
+++ b/app/index.html
@@ -16,26 +16,26 @@
     </div>
 
     <section class="card__body">
-      <header class="card__title">
-        <h2 class="card__name">Victor Crest</h2>
-        <p class="card__age">26</p>
-      </header>
-      <p class="card__description">London</p>
+      <div class="card__title">
+        <div class="card__name">Victor Crest</div>
+        <div class="card__age">26</div>
+      </div>
+      <div class="card__description">London</div>
 
       <div class="card__info">
         <div class="card__info-item">
-          <h3 class="card__count">80K</h3>
-          <p class="card__count-description">Followers</p>
+          <div class="card__count">80K</div>
+          <div class="card__count-description">Followers</div>
         </div>
 
         <div class="card__info-item">
-          <h3 class="card__count">803K</h3>
-          <p class="card__count-description">Likes</p>
+          <div class="card__count">803K</div>
+          <div class="card__count-description">Likes</div>
         </div>
 
         <div class="card__info-item">
-          <h3 class="card__count">1.4K</h3>
-          <p class="card__count-description">Photos</p>
+          <div class="card__count">1.4K</div>
+          <div class="card__count-description">Photos</div>
         </div>
       </div>
     </section>
