Add new container to the layout and set height sizes for the card elements

--- a/app/index.html
+++ b/app/index.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="src/assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="src/styles/style.css">  
-  <title>Frontend Mentor | Profile card component</title>
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-</head>
-<body>
 
-  <article class="card">
-    <div class="card__media">
-      <img src="" alt="Young afroamerican man">
-    </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/images/favicon-32x32.png">
+    <link rel="stylesheet" href="src/styles/style.css">
+    <title>Frontend Mentor | Profile card component</title>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
 
-    <section class="card__body">
-      <div class="card__title">
-        <div class="card__name">Victor Crest</div>
-        <div class="card__age">26</div>
+    <article class="card">
+      <div class="card__media">
+        <img src="" alt="Young afroamerican man">
       </div>
-      <div class="card__description">London</div>
 
-      <div class="card__info">
-        <div class="card__info-item">
-          <div class="card__count">80K</div>
-          <div class="card__count-description">Followers</div>
+      <section class="card__body">
+        <div class="card__profile">
+          <div class="card__title">
+            <div class="card__name">Victor Crest</div>
+            <div class="card__age">26</div>
+          </div>
+          <div class="card__description">London</div>
         </div>
 
-        <div class="card__info-item">
-          <div class="card__count">803K</div>
-          <div class="card__count-description">Likes</div>
-        </div>
+        <div class="card__info">
+          <div class="card__info-item">
+            <div class="card__count">80K</div>
+            <div class="card__count-description">Followers</div>
+          </div>
 
-        <div class="card__info-item">
-          <div class="card__count">1.4K</div>
-          <div class="card__count-description">Photos</div>
+          <div class="card__info-item">
+            <div class="card__count">803K</div>
+            <div class="card__count-description">Likes</div>
+          </div>
+
+          <div class="card__info-item">
+            <div class="card__count">1.4K</div>
+            <div class="card__count-description">Photos</div>
+          </div>
         </div>
-      </div>
-    </section>
-  </article>
-  
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">dekitsuneco</a>.
-  </footer>
-</body>
+      </section>
+    </article>
+
+
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">dekitsuneco</a>.
+    </footer>
+  </body>
+
 </html>
