Add link to github in the footer

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
 
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">dekitsuneco</a>.
+      Coded by <a href="https://github.com/dekitsuneco">dekitsuneco</a>.
     </footer>
   </body>
 
