Edit links for better appearance

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
-    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/images/favicon-32x32.png">
-    <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
+    <link rel="stylesheet" href="./src/styles/style.css">
     <title>Frontend Mentor | Profile card component</title>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
@@ -14,7 +14,7 @@
       
     <article class="card">
       <div class="card__media">
-        <img src="src/assets/images/image-victor.jpg" alt="Young afroamerican man">
+        <img src="./src/assets/images/image-victor.jpg" alt="Young afroamerican man">
       </div>
 
       <section class="card__body">
