--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
       
     <article class="card">
       <div class="card__media">
-        <img src="./src/assets/images/image-victor.jpg" alt="Young afroamerican man">
+        <img src="./src/assets/images/image-victor.jpg" alt="Young afro-american man">
       </div>
 
       <section class="card__body">
