Wrap content with main tag

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
     <body>
-      
-    <article class="card">
+      <main>
+            <article class="card">
       <div class="card__media">
         <img src="./src/assets/images/image-victor.jpg" alt="Young afro-american man">
       </div>
@@ -44,6 +44,8 @@
         </div>
       </section>
     </article>
+      </main>
+
 
 
     <footer class="attribution">
