Replace misused section tag with div

--- a/app/index.html
+++ b/app/index.html
@@ -10,41 +10,42 @@
     <title>Frontend Mentor | Profile card component</title>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
-    <body>
-      <main>
-            <article class="card">
-      <div class="card__media">
-        <img src="./src/assets/images/image-victor.jpg" alt="Young afro-american man">
-      </div>
 
-      <section class="card__body">
-        <div class="card__profile">
-          <div class="card__title">
-            <div class="card__name">Victor Crest</div>
-            <div class="card__age">26</div>
-          </div>
-          <div class="card__description">London</div>
+  <body>
+    <main>
+      <article class="card">
+        <div class="card__media">
+          <img src="./src/assets/images/image-victor.jpg" alt="Young afro-american man">
         </div>
 
-        <div class="card__info">
-          <div class="card__info-item">
-            <div class="card__count">80K</div>
-            <div class="card__count-description">Followers</div>
+        <div class="card__body">
+          <div class="card__profile">
+            <div class="card__title">
+              <div class="card__name">Victor Crest</div>
+              <div class="card__age">26</div>
+            </div>
+            <div class="card__description">London</div>
           </div>
 
-          <div class="card__info-item">
-            <div class="card__count">803K</div>
-            <div class="card__count-description">Likes</div>
-          </div>
+          <div class="card__info">
+            <div class="card__info-item">
+              <div class="card__count">80K</div>
+              <div class="card__count-description">Followers</div>
+            </div>
 
-          <div class="card__info-item">
-            <div class="card__count">1.4K</div>
-            <div class="card__count-description">Photos</div>
+            <div class="card__info-item">
+              <div class="card__count">803K</div>
+              <div class="card__count-description">Likes</div>
+            </div>
+
+            <div class="card__info-item">
+              <div class="card__count">1.4K</div>
+              <div class="card__count-description">Photos</div>
+            </div>
           </div>
         </div>
-      </section>
-    </article>
-      </main>
+      </article>
+    </main>
 
 
 
