--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <main>
-      <article class="card">
+      <div class="card">
         <div class="card__media">
           <img src="./src/assets/images/image-victor.jpg" alt="Young afro-american man">
         </div>
@@ -44,7 +44,7 @@
             </div>
           </div>
         </div>
-      </article>
+      </div>
     </main>
 
 
