Add landmarks to the page

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <main>
+    <main role="main">
       <div class="card">
         <div class="card__media">
           <img src="./src/assets/images/image-victor.jpg" alt="Young afro-american man">
@@ -47,9 +47,7 @@
       </div>
     </main>
 
-
-
-    <footer class="attribution">
+    <footer class="attribution" role="contentinfo">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/dekitsuneco">dekitsuneco</a>.
     </footer>
